tests/baselines/reference/deprecatedCompilerOptions2.errors.txt
/foo/tsconfig.json(3,19): error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.


==== /foo/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "module": "amd",
                      ~~~~~
!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
            "target": "ES3",
            "noImplicitUseStrict": true,
            "keyofStringsOnly": true,
            "suppressExcessPropertyErrors": true,
            "suppressImplicitAnyIndexErrors": true,
            "noStrictGenericChecks": true,
            "charset": "utf8",
            "out": "dist.js",
            "ignoreDeprecations": "5.0"
        }
    }
    
==== /foo/a.ts (0 errors) ====
    const a = 1;
    